--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.3
-Pillow
-pytz
-tzdata
+pip install python-telegram-bot==20.3
+pip install Pillow
+pip install pytz
+pip install tzdata
