--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install python-telegram-bot==20.3
-pip install Pillow
-pip install pytz
-pip install tzdata
+python-telegram-bot==21.4
+Pillow==10.4.0
+pytz==2024.1
+tzdata==2024.1
