--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,3 +1,8 @@
-git add nixpacks.toml
-git commit -m "Forzar Python 3.13 en Railway con Nixpacks"
-git push
+[phases.setup]
+nixPkgs = ["python313"]
+
+[phases.build]
+nixPkgs = ["python313", "gcc", "pkg-config", "libffi", "openssl"]
+
+[phases.start]
+cmd = "python bot.py"
